--- a/media.css
+++ b/media.css
@@ -1,14 +1,6 @@
 
 @media all and (min-width:1024px)
 {
-    header
-    {
-       
-       /* background-image: url(images/hands.png);
-       background-repeat: no-repeat;
-       background-size: cover; */
-
-    }
     .burger
     {display: none;}
     
@@ -26,7 +18,15 @@ font-weight: 700;
 line-height: 20px;
 }
 
-
+.text-1
+{
+    width: 994px;
+    text-align: center;
+font-family: kalam;
+font-size: 2.4rem;
+font-style: normal;
+font-weight: 400;
+}
 
 .text
 {
@@ -50,7 +50,7 @@ padding-right: 20px;
 
 .lorem-1
 {
-    grid:column: 1/6;
+    grid-column: 1/6;
 }
 
 .lorem-2
@@ -60,7 +60,7 @@ padding-right: 20px;
 
 .lorem-3
 {
-    grid- column :1 / 6 ;
+    grid-column :1 / 6 ;
 }
 
 .lorem-4
@@ -70,13 +70,14 @@ padding-right: 20px;
 
 .lorem-5
 {
-    grid-column: 1/6
+    grid-column:1/6
 }
 
 .lorem-6
 {
-    grid- column :6 / 13 ;
+    grid-column:6 /13 ;
 }
+
 
 
 
@@ -93,48 +94,25 @@ height: 536px;
     display: flex;
     justify-content: space-around;
   
-
-   
 }
 
 
 }
-
-
-
-
- 
-  
-        
-   
-
-
-
-
-
-
-
-
-
 
 
 @media all and (min-width:1440px)
 {
 
-
-
-
-
     .content
 {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 50%; 50%;
+    grid-template-rows: 50%;  50%;
 }
 
 .lorem-1
 {
-    grid:column: 1/4;
+    grid-column: 1/4;
 }
 
 .lorem-2
@@ -144,7 +122,7 @@ height: 536px;
 
 .lorem-3
 {
-    grid- column :8 /13;
+    grid-column:8/13;
 }
 
 .lorem-4
@@ -159,21 +137,8 @@ height: 536px;
 
 .lorem-6
 {
-    grid- column :8 / 13 ;
+    grid-column:8 / 13 ;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 }
 
