--- a/style.css
+++ b/style.css
@@ -56,6 +56,9 @@ font-size: 4.2rem;
 height: 160px;
 }
 
+
+
+
 .text
 {
  max-width: 335px;
@@ -70,18 +73,30 @@ padding-right: 20px;
 h4
 {
    margin-top: 60px;
-max-width: 286px;
+   margin-bottom :40px; ;
 height: 31px;
 text-align: center;
 
 font-size: 3.6rem;
 }
 
+.content
+{
+   justify-content: center;
+align-items: center;
+gap: 80px;
+}
+
+
+
+
+
+
 .text-1
 {
-
+text-align: center;
 margin-top: 15px;
-max-width: 334px;
+width: 334px;
 height: 109px;
 text-align: center;
 font-family: kalam;
@@ -95,7 +110,6 @@ font-weight: 400;
 {
    text-align: center;
    font-size: 1.8rem;
-   weight: 400;
    max-width: 298px;
    height: 84px;
    margin-top: 10px;
